--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,7 @@
     <h2><%= @article.author %></h2>
     <div class="article-link"><%= link_to "Read it!", @article.url %></div>
     <input id="btn-gen" type="button" onclick="location.href='<%= random_path %>';" value="Another!" />
-    <div class="gen-msg">or hit the spacebar for another random article!</div>
+    <div class="gen-msg">or hit the <em>spacebar</em> for another random article!</div>
   </div>
 </div>
 
