--- a/app/assets/stylesheets/articles/_show.scss
+++ b/app/assets/stylesheets/articles/_show.scss
@@ -35,4 +35,11 @@
   margin-top: 30px;
   font-size: 1.7em;
   color: grey;
+  em {
+    font-style: normal;
+    background-color: #a0a0a0;
+    color: white;
+    padding: 3px 20px;
+    border-radius: 7px;
+  }
 }
