--- a/app/assets/stylesheets/articles/_show.scss
+++ b/app/assets/stylesheets/articles/_show.scss
@@ -1,5 +1,6 @@
 .container.full-screen-flex {
   display: flex;
+  width 100%;
   height: calc(100vh - 70px);
   align-items: center;
   min-height: 430px;
