cleaned up routes to only use root

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <a href="/" class="navbar-wagon-brand">
-    <span class="brand-title">Effective Altruism Article Generator</span>
+    <span class="brand-title">Effective Altruism Procrastinator</span>
   </a>
 
   <!-- Right Navigation -->
