added press enter to read functionality

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -17,8 +17,8 @@
   document.body.onkeyup = function(e){
       if(e.keyCode == 32){
         gen.click();
-      // } else if(e.keyCode == 13){
-      //   rd.click();
+      } else if(e.keyCode == 13){
+        rd.click();
       }
     }
   </script>
