--- a/app/assets/stylesheets/articles/_show.scss
+++ b/app/assets/stylesheets/articles/_show.scss
@@ -1,19 +1,10 @@
 .container.full-screen-flex {
   display: flex;
   width: 100%;
-  // height: calc(100vh - 70px);
-  justify-content: space-around;
-  min-height: 430px;
-  .content {
-    padding-top: 20px;
-  }
+  align-items: center;
+  justify-content: center;
+  min-height: calc(100vh - 265px);
 }
-
-// @media (min-width: $screen-sm-min) {
-//   .container.full-screen-flex .content {
-//       padding-top: 80px;
-//   }
-// }
 
 #article-link {
   @media (min-width: $screen-sm-min) {
@@ -62,3 +53,54 @@
     border-radius: 7px;
   }
 }
+
+// Font sizes
+h1 {
+  font-size: 2em;
+  /* 2x body copy size = 32px */
+  line-height: 1.25;
+  /* 45px / 36px */
+}
+
+@media (min-width: 43.75em) {
+  h1 {
+    font-size: 2.5em;
+    /* 2.5x body copy size = 40px */
+    line-height: 1.125;
+  }
+}
+
+@media (min-width: 56.25em) {
+  h1 {
+    font-size: 3em;
+    /* 3x body copy size = 48px */
+    line-height: 1.05;
+    /* keep to a multiple of the 20px line height
+    and something more appropriate for display headings */
+  }
+}
+
+h2 {
+  font-size: 1.625em;
+  /* 1.625x body copy size = 26px */
+  line-height: 1.15384615;
+  /* 30px / 26px */
+}
+
+@media (min-width: 43.75em) {
+  h2 {
+    font-size: 2em;
+    /* 2x body copy size = 32px */
+    line-height: 1.25;
+  }
+}
+
+@media (min-width: 56.25em) {
+  h2 {
+    font-size: 2.25em;
+    /* 2.25x body copy size = 36px */
+    line-height: 1.25;
+  }
+}
+
+
