--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,7 +7,7 @@
     <h1><%= @article.title %></h1>
     <h2><%= @article.author %></h2>
 <!--     <div class="rd-msg">Hit <em>enter</em> to read!</div>
- -->    <div class="gen-msg hidden-xs hidden-sm">or hit the <em>spacebar</em> for another random article!</div>
+ -->    <div class="gen-msg hidden-xs ">or hit the <em>spacebar</em> for another random article!</div>
   </div>
 </div>
 
