--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,7 +6,7 @@
     <a href="#"><i class="fa fa-twitter"></i></a>
     <a href="#"><i class="fa fa-linkedin"></i></a>
   </div>
-  <div class="footer-copyright">
+  <div class="footer-copyright hidden-xs">
     This footer is made with <i class="fa fa-heart"></i> at Le Wagon
   </div>
 </div>
