--- a/app/assets/stylesheets/articles/_show.scss
+++ b/app/assets/stylesheets/articles/_show.scss
@@ -3,7 +3,11 @@
   width: 100%;
   align-items: center;
   justify-content: center;
-  min-height: calc(100vh - 265px);
+  @media (min-width: $screen-md-min) {
+   .content {
+    padding-top: 20px;
+   }
+  }
 }
 
 #article-link {
