--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,2 +1,10 @@
 // Specific CSS for your home-page
+.Site {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
 
+.Site-content {
+  flex: 1;
+}
