--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,13 @@
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
   </head>
-  <body>
+  <body class="Site">
     <%= render "shared/navbar" %>
+    <main class="Site-content">
     <%= yield %>
     <%= javascript_include_tag 'application' %>
     <%= yield(:after_js) %>
+    </main>
     <%= render "shared/footer" %>
   </body>
 </html>
