--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
   </head>
+  <!-- to allow for sticky footer, i make body 100vh height and a flex column -->
   <body class="Site">
     <%= render "shared/navbar" %>
     <main class="Site-content">
