--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,12 +1,10 @@
 <div class="footer">
   <div class="footer-links">
     <a href="#"><i class="fa fa-github"></i></a>
-    <a href="#"><i class="fa fa-instagram"></i></a>
     <a href="#"><i class="fa fa-facebook"></i></a>
     <a href="#"><i class="fa fa-twitter"></i></a>
-    <a href="#"><i class="fa fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright hidden-xs">
-    This footer is made with <i class="fa fa-heart"></i> at Le Wagon
+    Made with <i class="fa fa-heart"></i> by James Aung
   </div>
 </div>
