--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,10 +7,10 @@
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
-<!--     <a href="" class="navbar-wagon-item navbar-wagon-link">Host</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Trips</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Messages</a> -->
-
+    <!-- <a href= '<% articles_path %>' class="navbar-wagon-item navbar-wagon-link">Index</a> -->
+    <!-- <a href="" class="navbar-wagon-item navbar-wagon-link">Trips</a>
+    <a href="" class="navbar-wagon-item navbar-wagon-link">Messages</a>
+ -->
     <!-- Profile picture with dropdown list -->
 <!--     <div class="navbar-wagon-item">
       <div class="dropdown">
