--- a/app/assets/stylesheets/articles/_show.scss
+++ b/app/assets/stylesheets/articles/_show.scss
@@ -46,7 +46,8 @@
 }
 
 .gen-msg, .rd-msg {
-  margin: 30px 0px;
+  margin-top: 30px;
+  margin-bottom: 20px;
   font-size: 1.7em;
   color: grey;
   em {
