added instructions to footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,5 +6,6 @@
   </div>
   <div class="footer-copyright hidden-xs">
     Made with <i class="fa fa-heart"></i> by James Aung
+    <div>Press ENTER to read. Press SPACEBAR to stumble.</div>
   </div>
 </div>
