--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,18 @@
-<ul>
-  <% @articles.each do |article| %>
-    <li><%= link_to article.title, article_path(article) %></li>
-  <% end %>
-</ul>
+<div style="padding: 20px;">
+  <table class="table">
+    <thead class="thead-light">
+      <tr>
+        <th>Title</th>
+        <th>Author</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @articles.each do |article| %>
+        <tr>
+          <td><%= link_to article.title, article_path(article) %></td>
+          <td><%= link_to article.author, article_path(article) %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
