--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,9 +5,9 @@
   </a>
 
   <!-- Right Navigation -->
-  <div class="navbar-wagon-right hidden-xs hidden-sm">
+  <div class="navbar-wagon-right hidden-xs">
 
-    <!-- <a href= '<% articles_path %>' class="navbar-wagon-item navbar-wagon-link">Index</a> -->
+    <a href= "<%= articles_path %>"" class="navbar-wagon-item navbar-wagon-link">Index</a>
     <!-- <a href="" class="navbar-wagon-item navbar-wagon-link">Trips</a>
     <a href="" class="navbar-wagon-item navbar-wagon-link">Messages</a>
  -->
@@ -24,16 +24,15 @@
     </div> -->
   </div>
 
+
   <!-- Dropdown appearing on mobile only -->
-<!--   <div class="navbar-wagon-item hidden-md hidden-lg">
+  <div class="navbar-wagon-item visible-xs">
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Host</a></li>
-        <li><a href="#">Trips</a></li>
-        <li><a href="#">Messagese</a></li>
+        <li<a href= "<%= articles_path %>"" class="navbar-wagon-item navbar-wagon-link">Index</a></li>
       </ul>
     </div>
-  </div> -->
+  </div>
 </div>
 
