--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,7 +27,7 @@
 
   <!-- Dropdown appearing on mobile only -->
   <div class="navbar-wagon-item visible-xs">
-    <div class="dropdown">g
+    <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <li<a href= "<%= articles_path %>"" class="navbar-wagon-item navbar-wagon-link">Index</a></li>
