--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,7 +5,7 @@
     <a href="#"><i class="fa fa-twitter"></i></a>
   </div>
   <div class="footer-copyright hidden-xs">
-    Made with <i class="fa fa-heart"></i> by James Aung
+    Made with <i class="fa fa-heart"></i>
     <div>Press ENTER to read. Press SPACEBAR to stumble.</div>
   </div>
 </div>
